force-app/main/default/objects/Invoice_Line__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Invoice Line is &quot;Active&quot; and is included in the Invoice Summary</description>
    <inlineHelpText>If checked, this Invoice Line is &quot;Active&quot; and is included in the Invoice Summary</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>