force-app/main/default/objects/Invoice_Line__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External Id (used to import records from Assessment CSV file)</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id (used to import records from Assessment CSV file)</inlineHelpText>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>