force-app/main/default/objects/Invoice_Line__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <description>Line Amount</description>
    <inlineHelpText>Line Amount</inlineHelpText>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>